fixing letter-spacing

--- a/assets/css/typography.scss
+++ b/assets/css/typography.scss
@@ -1,5 +1,5 @@
-$letter-spacing-headings: -0.08rem;
-$letter-spacing-body: -0.04rem;
+$letter-spacing-headings: -0.05rem;
+$letter-spacing-body: -0.02rem;
 
 a {
   text-decoration: underline;
